started to comment

--- a/4_programming/modules/calculator/calculator.html
+++ b/4_programming/modules/calculator/calculator.html
@@ -1,4 +1,4 @@
-<!DOCTYpE html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Simple Calculator</title>
@@ -6,36 +6,51 @@
     <body>
 
         <h1> Simple Calculator</h1>
+        //Given the Page a title
         <h2><p>+ = Addition<p> <p>- = Subtraction<p> <p>/ = Division<p> <p> * = Multiplication<p></h2>
+        //Explained the operations you can use
             <p>First Numeral:<p> <input id="num1">
+        //Created first number input
             <p>Second Numeral:<p> <input id="num2">
+        //Created second number input
             <p>Operation (please use symbols):<p> <input id="operation">
+        //Created input for operations
+        <p><button onclick="myFunction()">Calculate</button><p>
+        //created a button that runs a function
     <script>
         function myFunction() {
+            //creating function for the calculations
             var operation = document.getElementById("operation").value;
             var a = parseInt(document.getElementById("num1").value);
             var b = parseInt(document.getElementById("num2").value);
+            //taking the inputs from the inputs and assigning them to variables
             var answ;
+            //creating variable for answ
 
           if (operation == "+") {
             answ = a + b;
+              //created if operation
               window.alert(answ);
+              //
           }
-        else if (operation == "-") {
+        if (operation == "-") {
 
             answ = a - b;
               alert(answ);
         }
-        else if (operation == "/") {
+        if (operation == "/") {
             answ = a / b;
               alert(answ);
         }
-         else {
+        if (operation == "*") {
             answ = a * b;
               alert(answ);
         }
+        else {
+            alert("Not a valid input");
+        }
+
     }
     </script>
-        <p><button onclick="myFunction()">Calculate</button><p>
     </body>
 </html>
